Fixed some overflow-x issues

--- a/frontend/src/components/notes/note.module.scss
+++ b/frontend/src/components/notes/note.module.scss
@@ -240,7 +240,7 @@
 .options {
   position: absolute;
 
-  right: -2rem;
+  right: 0rem;
   bottom: 1.2rem;
   background-color: #242424;
   border-radius: 5px;
