--- a/frontend/src/components/notes/ui/actions/color-pallete/styles.module.scss
+++ b/frontend/src/components/notes/ui/actions/color-pallete/styles.module.scss
@@ -2,16 +2,16 @@
 
 .content {
   @include for-phone-only {
+    left: 4.5rem;
+    right: 4.5rem;
+  }
+  @media (min-width: 599px) {
     left: 4rem;
     right: 4rem;
   }
-  @media (min-width: 599px) {
-    left: 2rem;
-    right: 2rem;
-  }
   @include for-desktop-up {
-    left: -4rem;
-    right: -4rem;
+    left: 3.5rem;
+    right: 3.5rem;
   }
   visibility: visible;
   display: grid;
@@ -21,29 +21,26 @@
 
   background-color: #202124;
   padding: 0.5rem;
-  gap: 0.5rem;
   border-radius: 10px;
   box-shadow: 0 1px 2px 0 rgb(0 0 0 / 60%), 0 2px 6px 2px rgb(0 0 0 / 30%);
   .colors {
     @include for-phone-only {
+      width: 1.3rem;
+      height: 1.3rem;
+    }
+    @media (min-width: 599px) {
       width: 1.5rem;
       height: 1.5rem;
     }
-    @media (min-width: 599px) {
+    @include for-desktop-up {
       width: 1.7rem;
       height: 1.7rem;
     }
-    @include for-desktop-up {
-      width: 2rem;
-      height: 2rem;
-    }
-    // width: 2rem;
-    // height: 2rem;
     border-radius: 50%;
   }
 
   svg {
-    width: 1.8rem;
-    height: 1.8rem;
+    width: 1.7rem;
+    height: 1.7rem;
   }
 }
